--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans&display=swap');
 html, body {
 	margin: 0;
-	height: 100%;
+	padding: 0;
+	height: 100vh;
+	background-color: lightcyan;
 	font-family: 'Work Sans', sans-serif;
 }
