--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -4,6 +4,6 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100vh;
-	background-color: lightcyan;
+	background-color: white;
 	font-family: 'Work Sans', sans-serif;
 }
